--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     container_name: postgres
     restart: unless-stopped
     env_file:
-      - ./pgsql/.env.properties
+      - ./pgsql/.env
     ports:
       - "5432:5432"
     volumes:
@@ -39,7 +39,7 @@ services:
     container_name: redis
     restart: unless-stopped
     env_file:
-      - ./redis/.env.properties
+      - ./redis/.env
     ports:
       - "6379:6379"
     volumes:
