[BJW] 2025/11/30 JDK TOOl CHAIN 수정

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,10 @@ description = 'swyp'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+//        languageVersion = JavaLanguageVersion.of(21)
+
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
     }
 }
 
