[BJW] 2025/12/02 MemberApi 리펙토링 - 3 - Member Controller, UseCase 원자화 - MemberReminder 객체 추가 - JWT인증 방식 리펙토링

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,3 +59,12 @@ jwt:
 
 server:
   port: 8080
+
+
+management:
+  endpoints:
+    web:
+      base-path: /jikgong
+      exposure:
+        include: prometheus
+
