--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,9 @@ dependencies {
 
     // WAR deploy
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
+    // 코드 변경 감지 (개발환경에서 사용할 목적)
+    developmentOnly("org.springframework.boot:spring-boot-devtools")
 }
 
 kotlin {
