--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,43 +1,51 @@
 # Multi-stage build for Spring Boot Kotlin application
 
+# =======================
 # Stage 1: Build
+# =======================
 FROM gradle:8.11.1-jdk21 AS build
 
-WORKDIR /app
+WORKDIR /workspace
 
-# Copy Gradle files for dependency caching
-COPY build.gradle gradlew ./
+# 1. Gradle 관련 파일 먼저 복사 (캐시 최대 활용)
+COPY gradlew .
 COPY gradle ./gradle
+COPY build.gradle* settings.gradle* ./
 
-# Download dependencies (cached layer)
-RUN ./gradlew dependencies --no-daemon
+# gradlew 실행권한 부여
+RUN chmod +x gradlew
 
-# Copy source code
+# 2. 소스 코드 전체 복사
 COPY src ./src
 
-# Build application
-RUN ./gradlew bootJar --no-daemon
+# 3. 애플리케이션 빌드
+#   - bootJar만 빌드 (스프링 부트 실행용 JAR)
+RUN ./gradlew clean bootJar -x test --no-daemon
 
+# =======================
 # Stage 2: Runtime
+# =======================
 FROM eclipse-temurin:21-jre-jammy
 
 WORKDIR /app
 
-# Create non-root user
+# 1. 기본 환경
+ENV TZ=Asia/Seoul \
+    JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0"
+
+# 2. non-root 유저 생성
 RUN groupadd -r spring && useradd -r -g spring spring
 
-# Copy jar from build stage
-COPY --from=build /app/build/libs/*.jar app.jar
+# 3. 빌드 결과 JAR 복사
+#    - build/libs 안에 있는 부트 JAR 하나를 app.jar로 이름 바꿔서 복사
+COPY --from=build /workspace/build/libs/*.jar app.jar
 
-# Change ownership
-RUN chown spring:spring app.jar
+# 4. 디버깅 + 권한 변경
+RUN ls -al && chown spring:spring app.jar
 
 USER spring
 
 EXPOSE 8080
 
-# Run with JVM memory optimizations for containers
-ENTRYPOINT ["java", \
-    "-XX:+UseContainerSupport", \
-    "-XX:MaxRAMPercentage=75.0", \
-    "-jar", "app.jar"]
+# 5. 애플리케이션 실행
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
