--- a/build.gradle
+++ b/build.gradle
@@ -47,9 +47,6 @@ dependencies {
     // Kotlin
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
 
-    // Mockito Kotlin → 테스트 의존성이 더 자연스럽다
-    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.2.1'
-
     // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.34'
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
@@ -71,8 +68,11 @@ dependencies {
 
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // Mockito + Mockito-Kotlin
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.2.1'
+    testImplementation 'org.mockito:mockito-core:5.11.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
 
     // WAR deploy
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
