--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation' // ✅ @Valid, @Email 등 사용 시
+    implementation 'org.springframework.boot:spring-boot-starter-aop' // AOP for rate limiting
 
     // JWT
     implementation "io.jsonwebtoken:jjwt-api:0.11.5"
