[BJW] 2025/12/08 loggin_promethues_grafana 완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -76,9 +76,14 @@ server:
 management:
   endpoints:
     web:
-      base-path: /jikgong
       exposure:
-        include: prometheus
+        include: "health,info,prometheus"  # 혹은 "*"
+  endpoint:
+    health:
+      show-details: "always"
+  metrics:
+    tags:
+      application: my-spring-app   # 공통 태그
 
 
 file:
