--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,17 +30,33 @@ services:
         hard: 65536
 
   redis:
-    build:
-      context: docker/redis
-      dockerfile: Dockerfile
+    image: redis:7.4-alpine      # ⬅ build 대신 image 사용
     container_name: redis
     restart: unless-stopped
     env_file:
-      - docker/redis/.env
+      - docker/redis/.env        # 필요 없으면 이 줄도 삭제 가능
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    restart: unless-stopped
+    volumes:
+      - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
 
 volumes:
   postgres_data:
