[JMY] 2025/12/13 관심사 API 리팩토링, 관심사 데이터 조회 API 추가, 미션 선택 API 요청데이터 수정

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     runtimeOnly 'org.postgresql:postgresql'
 
+    // Hypersistence Utils (PostgreSQL 배열, JSON 등 지원)
+    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.9.0'
+
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
