--- a/src/main/resources/spy.properties
+++ b/src/main/resources/spy.properties
@@ -1,13 +1,9 @@
 # p6spy 설정
 appender=com.p6spy.engine.spy.appender.Slf4JLogger
-logMessageFormat=com.p6spy.engine.spy.appender.CustomLineFormat
-customLogMessageFormat=%(currentTime)|%(executionTime)ms|%(category)|%(effectiveSql)
+logMessageFormat=com.p6spy.engine.spy.appender.MultiLineFormat
 
 # 날짜 포맷
 dateformat=yyyy-MM-dd HH:mm:ss
 
-# SQL 포맷팅
+# 불필요한 카테고리 제외 (운영 환경 최적화)
 excludecategories=info,debug,result,resultset
-
-# 멀티라인 포맷
-logMessageFormat=com.p6spy.engine.spy.appender.MultiLineFormat
