[BJW] 2025/12/14 curation integration SEE VERSION E2E 테스트 완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -71,7 +71,9 @@ interest:
 
 server:
   port: 8080
-
+  compression:
+    enabled: true
+    mime-types: application/json
 # Swagger UI 설정
 springdoc:
   swagger-ui:
