--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation("org.springframework.security:spring-security-test")
     implementation 'org.springframework.boot:spring-boot-starter-validation' // ✅ @Valid, @Email 등 사용 시
     implementation 'org.springframework.boot:spring-boot-starter-aop' // AOP for rate limiting
 
