[JMY] 2025/12/28 batch 스키마 초기화 이후 재실행 방지

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,7 +42,7 @@ spring:
 
   batch:
     jdbc:
-      initialize-schema: always  # 최초 1회 후 never로 변경 권장
+      initialize-schema: never  # 최초 1회 후 never로 변경 권장
 
 logging:
   level:
