--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,6 +65,7 @@ clova:
 
 server:
   port: 8080
+  forward-headers-strategy: framework  # X-Forwarded-Proto 헤더를 인식하여 HTTPS로 처리
   compression:
     enabled: true
     mime-types: application/json
