--- a/docker/loki/loki-config.yml
+++ b/docker/loki/loki-config.yml
@@ -33,10 +33,18 @@ schema_config:
         prefix: index_
         period: 24h
 
+compactor:
+  working_directory: /loki/compactor
+  compaction_interval: 10m
+  retention_enabled: true
+  retention_delete_delay: 2h
+  retention_delete_worker_count: 150
+  delete_request_store: filesystem
+
 ruler:
   alertmanager_url: http://localhost:9093
 
 limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h  # 7일
-  retention_period: 744h            # 31일 보관
+  retention_period: 744h            # 31일 (1개월) 보관
