--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,18 @@ services:
       - "8080:8080"
     network_mode: host
 
+  app-qa:
+    build:
+      context: .
+      dockerfile: docker/app/Dockerfile
+    container_name: app-qa
+    restart: unless-stopped
+    env_file:
+      - src/main/resources/env.properties
+    ports:
+      - "8082:8082"
+    network_mode: host
+
   postgres:
     build:
       context: docker/pgsql
