[BJW] 2026/01/19 프로필 수정시 job이 자영업자일 경우 세부 직무 저장 로직 변경, member Excel 다운로드 기능 추가

--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,9 @@ dependencies {
 
     // 코드 변경 감지 (개발환경에서 사용할 목적)
     developmentOnly("org.springframework.boot:spring-boot-devtools")
+
+
+    implementation "org.apache.poi:poi-ooxml:5.2.5"
 }
 
 kotlin {
