--- a/build.gradle
+++ b/build.gradle
@@ -100,8 +100,11 @@ dependencies {
     // 코드 변경 감지 (개발환경에서 사용할 목적)
     developmentOnly("org.springframework.boot:spring-boot-devtools")
 
-
+    // Apache POI (엑셀 처리)
     implementation "org.apache.poi:poi-ooxml:5.2.5"
+
+    // Firebase Admin SDK
+    implementation "com.google.firebase:firebase-admin:9.2.0"
 }
 
 kotlin {
